# arbitrum-gatherer

./: Dockerfile  README.md  env-example  main.py  pyproject.toml  run.sh
arbitrum_gatherer/: config.py  models.py  services.py  utils.py
notebooks/: playground_db.ipynb
tests/: test_data_gaterer.py
